Creacion de la pagina de registrar habitaciones

--- a/SweetDreams/SweetDreams.Admin/_Imports.razor
+++ b/SweetDreams/SweetDreams.Admin/_Imports.razor
@@ -7,3 +7,6 @@
 @using Microsoft.JSInterop
 @using SweetDreams.Admin
 @using SweetDreams.Admin.Shared
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using BlazorInputFile
