--- a/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
@@ -65,7 +65,7 @@
                     <InputFile OnChange="CargarFoto"/>
                     @if(habitacion.Foto != null)
                     {
-                        <img src="habitacion.Foto" style="height:300px;width:300px"/>
+                        <img src="@habitacion.Foto" style="height:300px;width:300px"/>
                     }
                 </div>
 
