Agregando checkboxes al registro de habitacion

--- a/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
@@ -44,10 +44,15 @@
                 </div>
 
                 @*Características*@
-                <div class="form-group">
-                    <label>Características</label>
-                    <InputText @bind-Value="habitacion.Caracteriscas" class="form-control" />
-                </div>
+                @for (int i = 0; i < 5; i++)
+                {
+                    int index = i;
+
+                    <div class="form-group form-inline">
+                        <label>@Caracteristicas[index]</label>
+                        <input type="checkbox" @bind-value="Elecciones[index]" class="form-check-input col-1" />
+                    </div>
+                }
 
                 @*Precio*@
                 <div class="form-group">
@@ -94,6 +99,18 @@
 @code {
     private Habitacion habitacion = new Habitacion();
 
+    bool[] Elecciones = new bool[5];
+    string[] Caracteristicas = new string[5];
+
+    protected override void OnInitialized()
+    {
+        Caracteristicas[0] = "Una cama";
+        Caracteristicas[1] = "Lavavo";
+        Caracteristicas[2] = "Cama doble";
+        Caracteristicas[3] = "Refrigerador";
+        Caracteristicas[4] = "Amueblado";
+    }
+
     async Task CargarFoto(IFileListEntry[] files)
     {
         var file = files.FirstOrDefault();
@@ -120,6 +137,8 @@
 
     private async Task Guardar()
     {
+        AsignarCaracteristicas();
+
         var guardado = await Http.PostAsJsonAsync("http://localhost:5000/Api/Habitacion", habitacion);
 
         var estado = await guardado.Content.ReadFromJsonAsync<bool>();
@@ -132,6 +151,29 @@
         else
             toast.ShowError("Guardado incorrecto");
 
+    }
+
+    private void AsignarCaracteristicas()
+    {
+        habitacion.CaracteristicasSelecciones = string.Empty;
+        habitacion.Caracteriscas = string.Empty;
+
+        for (int i = 0; i < 5; i++)
+        {
+            if(i== 0)
+                habitacion.CaracteristicasSelecciones = habitacion.CaracteristicasSelecciones + Elecciones[i].ToString();
+            else
+                habitacion.CaracteristicasSelecciones = habitacion.CaracteristicasSelecciones + "," + Elecciones[i].ToString();
+
+            if (Elecciones[i] == true)
+            {
+                if(i == 0)
+                    habitacion.Caracteriscas = habitacion.Caracteriscas + Caracteristicas[i];
+                else
+                    habitacion.Caracteriscas = habitacion.Caracteriscas + ", " + Caracteristicas[i];
+
+            }
+        }
     }
 
     private async Task Eliminar()
@@ -159,7 +201,22 @@
             toast.ShowWarning("Habitación no encontrada");
         }
         else
+        {
             habitacion = respuesta;
+            AsigarCheckBox();
+        }
 
+    }
+
+    private void AsigarCheckBox()
+    {
+        string[] subCadena = habitacion.CaracteristicasSelecciones.Split(',');
+        int i = 0;
+
+        foreach(var cadena in subCadena)
+        {
+            Elecciones[i] = Convert.ToBoolean(cadena);
+            i++;
+        }
     }
 }
