Arreglos de Errores

--- a/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroCliente.razor
+++ b/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroCliente.razor
@@ -52,13 +52,13 @@
                 @*Correo*@
                 <div class="form-group">
                     <label>Correo:</label>
-                    <InputNumber @bind-Value="cliente.Correo" class="form-control" />
+                    <InputText @bind-Value="cliente.Correo" class="form-control" />
                 </div>
 
                 @*Clave*@
                 <div class="form-group">
                     <label>Contraseña:</label>
-                    <InputNumber @bind-Value="cliente.Clave" class="form-control" />
+                    <InputText @bind-Value="cliente.Clave" class="form-control" />
                 </div>
             </form>
         </div>
