--- a/SweetDreams/SweetDreams.Client/Shared/MainLayout.razor
+++ b/SweetDreams/SweetDreams.Client/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<BlazoredToasts />
+
 <div class="sidebar">
     <NavMenu />
 </div>
@@ -15,4 +17,4 @@
 
 </div>
 
-@*<BlazoredToasts />*@
+
