--- a/SweetDreams/SweetDreams.Client/_Imports.razor
+++ b/SweetDreams/SweetDreams.Client/_Imports.razor
@@ -7,5 +7,7 @@
 @using Microsoft.JSInterop
 @using SweetDreams.Client
 @using SweetDreams.Client.Shared
-@*@using Blazored.Toast
-@using Blazored.Toast.Services*@
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using BlazorInputFile
+
