Cambios de estilo en admin

--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Habitacion.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Habitacion.razor
@@ -87,7 +87,7 @@
                             <td>@item.Precio</td>
                             <td>@item.Estado</td>
                             <td><img src="@item.Foto" style="height:80px;width:80px" /></td>
-                            <td><a href="@($"RegistrarHabitacion/{item.HabitacionId}")">Mostrar</a></td>
+                            <td><a href="@($"RHabitacion/{item.HabitacionId}")">Mostrar</a></td>
                         </tr>
                         }
                     </tbody>
