--- a/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Habitacion.razor
@@ -1,5 +1,5 @@
-﻿@page "/RegistrarHabitacion"
-@page "/RegistrarHabitacion/{Id:int}"
+﻿@page "/RHabitacion"
+@page "/RHabitacion/{Id:int}"
 
 @using Models
 @using System.IO
